[package]
name = "rheader"
version = "0.1.0"
edition = "2024"

[lib]
name = "rheader"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
flate2 = { version = "1.1.5", features = ["zlib-rs"], default-features = false }
regex = "1.12.2"

[dependencies.pyo3]
version = "0.27.2"
features = ["abi3-py39"]
