[project]
name = "rheader"
version = "0.1.0a1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
]
test = [
    "astropy>=6.0.1",
    "fitsio>=1.3.0",
]

[tool.ty.environment]
root = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "rheader._rheader"
